syntax = "proto3";

import "google/protobuf/timestamp.proto";

package relay;
option go_package = "github.com/modelgate/modelgate/pkg/proto/model/relay";


message RequestAttempt {
  int64 id = 1;
  string request_uuid = 2;
  int64 attempt_no = 3;
  int64 provider_id = 4;
  string provider_code = 5;
  int64 provider_api_key_id = 6;
  int64 model_id = 7;
  string model_code = 8;
  string actual_model = 9;
  int64 account_id = 10;
  string account_name =11;
  int64 account_api_key_id = 12;
  int64 prompt_tokens = 13;
  int64 completion_tokens = 14;
  int64 total_tokens = 15;
  string status = 16;
  int64 elapsed_time = 17;
  int64 error_code = 18;
  string error_message = 19;
  google.protobuf.Timestamp completed_at = 20;
  google.protobuf.Timestamp created_at = 21;
  google.protobuf.Timestamp updated_at = 22;
}